@@ -10,10 +10,8 @@
 #import <OCHamcrest/HCHasCount.h>
 
     // Other OCHamcrest
-#import <OCHamcrest/HCAssertThat.h>
-#import <OCHamcrest/HCIsEqual.h>
 #import <OCHamcrest/HCIsEqualToNumber.h>
-#import <OCHamcrest/HCIsNot.h>
+#import <OCHamcrest/HCOrderingComparison.h>
 
     // Test support
 #import "AbstractMatcherTest.h"
@@ -29,43 +27,29 @@
 
 - (id<HCMatcher>) createMatcher
 {
-    return hasCount(equalTo(@"irrelevant"));
+    return hasCount(equalToUnsignedInteger(42));
 }
 
 
-- (void) testConvertCountToNSNumberAndPassToNestedMatcher
+- (void) testConvertsCountToNSNumberAndPassesToNestedMatcher
 {
-    NSUInteger fakeCount = 5;
-    FakeWithCount* fakeWithCount = [FakeWithCount fakeWithCount:fakeCount];
-    assertThat(fakeWithCount, hasCount(equalToUnsignedInteger(fakeCount)));
-    assertThat(fakeWithCount, isNot(hasCount(equalTo(equalToUnsignedInteger(fakeCount + 1)))));
-}
-
-
-- (void) testHasCountOfIsShortcutForEqualToUnsignedInteger
-{
-    NSUInteger fakeCount = 6;
-    FakeWithCount* fakeWithCount = [FakeWithCount fakeWithCount:fakeCount];
-    assertThat(fakeWithCount, hasCountOf(fakeCount));
-    assertThat(fakeWithCount, isNot(hasCountOf(fakeCount + 1)));
+    FakeWithCount* fakeWithCount = [FakeWithCount fakeWithCount:5];
+    
+    assertMatches(@"same number", hasCount(equalToUnsignedInteger(5)), fakeWithCount);
+    assertDoesNotMatch(@"different number", hasCount(equalToUnsignedInteger(6)), fakeWithCount);
 }
 
 
 - (void) testHasReadableDescription
 {
-    id<HCMatcher> countMatcher = equalToUnsignedInteger(7);
-    id<HCMatcher> matcher = hasCount(countMatcher);
-    
-    STAssertEqualObjects([matcher description],
-                         ([NSString stringWithFormat:@"collection with count %@",
-                                                    [countMatcher description]]),
-                         nil);
+    assertDescription(@"collection with count of a value greater than <5>",
+                      hasCount(greaterThan([NSNumber numberWithUnsignedInteger:5])));
 }
 
 
 - (void) testDescribesMismatchForItemWithWrongCount
 {
-    assertDescribeMismatch(@"was <counting> with count <42>",
+    assertDescribeMismatch(@"was <FakeWithCount> with count of <42>",
                            hasCount(equalToUnsignedInteger(1)),
                            [FakeWithCount fakeWithCount:42]);
 }
@@ -73,9 +57,53 @@
 
 - (void) testDescribesMismatchForItemWithoutCount
 {
-    assertDescribeMismatch(@"was <non-counting>",
+    assertDescribeMismatch(@"was <FakeWithoutCount>",
                            hasCount(equalToUnsignedInteger(1)),
                            [FakeWithoutCount fake]);
+}
+
+@end
+
+//--------------------------------------------------------------------------------------------------
+
+@interface HasCountOfTest : AbstractMatcherTest
+@end
+
+
+@implementation HasCountOfTest
+
+- (id<HCMatcher>) createMatcher
+{
+    return hasCountOf(42);
+}
+
+
+- (void) testHasCountOfIsShortcutForEqualToUnsignedInteger
+{
+    FakeWithCount* fakeWithCount = [FakeWithCount fakeWithCount:5];
+    
+    assertMatches(@"same number", hasCountOf(5), fakeWithCount);
+    assertDoesNotMatch(@"different number", hasCountOf(6), fakeWithCount);
+}
+
+
+- (void) testHasReadableDescription
+{
+    assertDescription(@"collection with count of <5>", hasCountOf(5));
+}
+
+
+- (void) testDescribesMismatchForItemWithWrongCount
+{
+    assertDescribeMismatch(@"was <FakeWithCount> with count of <42>",
+                           hasCountOf(1),
+                           [FakeWithCount fakeWithCount:42]);
+}
+
+
+- (void) testDescribesMismatchForItemWithoutCount
+{
+    assertDescribeMismatch(@"was <FakeWithoutCount>", hasCountOf(1), [FakeWithoutCount fake]);
 }
 
 @end
